--- a/README.html
+++ b/README.html
@@ -2,19 +2,22 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>voltdb-client-erlang Erlvolt 0.3.1/beta</title>
+	<title>voltdb-client-erlang Erlvolt 0.3.3/beta</title>
 	<link rel="stylesheet" type="text/css" href="default.css" />
 </head>
 <body>
 
-<h1>voltdb-client-erlang Erlvolt 0.3.1/beta</h1>
+<h1>voltdb-client-erlang Erlvolt 0.3.3/beta</h1>
 
-<p><strong>Release: 'Erlvolt 0.3.1/beta'</strong> <br/>
+<p><strong>Release: 'Erlvolt 0.3.3/beta'</strong> <br/>
 <strong>Author: H. Diedrich</strong> <br/>
 <strong>Production: Eonblast Corporation</strong> <br/>
 <strong>Copyright: (c) 2013 VoltDB, Inc</strong> <br/>
 <strong>Licence: MIT</strong> <br/>
 <strong>Date: 4 Feb 2013</strong>  </p>
+
+<p><strong>VoltDB: 2.8, 3.0</strong>
+<strong>Erlang: R15B03, R16 RC</strong></p>
 
 <p>This is an <a href="http://www.erlang.org">Erlang</a> <a href="hhtp://www.voltdb.com">VoltDB</a> driver provided by <a href="http://www.eonblast.com">Eonblast</a>. It is <a href="#Samples">easy</a> to use but provides strong <a href="#Adding_a_Pool">connection pooling</a> and a broad array of <a href="#Options">options</a>. It is optimized for a central node architecture and super high velocity OLTP.</p>
 
@@ -140,7 +143,7 @@
 
 <pre><code>-module(hello).
 -export([run/0]).
--import(erlvolt).
+
 -include("erlvolt.hrl").
 
 run() -&gt;
